# Py9Web

./: .gitignore
client_m09_12_02/: main.html  (+1 more)
m02_01/app_poetry/: app.logs  example.py  main.py  module.py  my_logger.py  pyproject.toml  type.py
m02_01/test_app/: pyproject.toml
m04_02/: Dockerfile  app.py  blog.json  client.py  pyproject.toml  readme.md  server.py  test_request.py
m04_02/data/: data.json
m04_02/templates/: blog.html
m05_01/: 01_intro.py  02_fake_db.py  03_gather_db.py  04_create_task.py  05_forever_loop.py  06_future.py  07_blocking_operation.py  08_cpu_bound.py  09_io_bound.py  10_wait.py  libs.py  pyproject.toml
m05_02/: 01_sync_async.py  02_for_await.py  03_async_for.py  main.py  pyproject.toml
m05_02/chat/: index.html  main.css  main.js  server.py
m05_02/file_sort/: main.py
m05_02/task_runner/: main.js  main.py
m05_02/task_runner/files/: alabal.js  fabric-waterfall.js  image-promise.js
m06_02/: change_to_table.py  create_db.sql  create_table.py  db_connection.py  hw.db  insert_to_table.py  pyproject.toml  seeds.py  select_to_table.py  update_table.py
m09_07_01/: config.ini  main.py  pyproject.toml  signup.py
m09_07_01/database/: db.py  models.py  repository.py
m09_07_01/examples/: core_example.py  session_async_example.py  session_example.py  session_new_example.py
m09_07_02/hw/: config.ini  main.py  pyproject.toml  seed.py
m09_07_02/hw/migrations/: env.py
m09_07_02/hw/src/: db.py  models.py
m09_07_02/webinar/: config.ini  main.py  pyproject.toml
m09_07_02/webinar/migrations/: env.py
m09_07_02/webinar/seed/: contacts.py  rel.py  students.py  teachers.py
m09_07_02/webinar/src/: db.py  models.py
m09_08_01/: privat.json  pyproject.toml  readme.md
m09_08_01/odm_mongoengine/: create.py  delete.py  models.py  read.py  update.py
m09_08_01/pymongo_example/: connect.py  start_main.py
m09_08_02/: pyproject.toml
m09_08_02/pub-sub/: consumer.py  producer.py
m09_08_02/redis_example/: app.py  cache.py  main.py  mytasks.py
m09_08_02/simple/: consumer.py  producer.py
m09_08_02/tasks/: consumer.py  producer.py
m09_09_01/: main.py  moskali.json  pyproject.toml
m09_09_01/statistic_war/: links.json  losses.json  scrapy.cfg
m09_09_01/statistic_war/statistic_war/: items.py  middlewares.py  pipelines.py  settings.py
m09_09_02/: authors.json  main.py  pyproject.toml  quotes.json  readme.md  result.csv  result.json  spider.py
m09_10_01/: pyproject.toml
m09_10_01/bootstrap-5.3.0-alpha1-examples/album/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/album-rtl/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/blog/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/blog-rtl/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/carousel/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/carousel-rtl/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/cheatsheet/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/cheatsheet-rtl/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/checkout/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/checkout-rtl/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/cover/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/dashboard/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/dashboard-rtl/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/dropdowns/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/features/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/footers/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/grid/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/headers/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/heroes/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/jumbotron/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/list-groups/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/masonry/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/modals/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/navbar-bottom/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/navbar-fixed/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/navbar-static/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/navbars/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/navbars-offcanvas/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/offcanvas-navbar/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/pricing/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/product/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/sidebars/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/sign-in/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/starter-template/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/sticky-footer/: index.html
m09_10_01/bootstrap-5.3.0-alpha1-examples/sticky-footer-navbar/: index.html
m09_10_01/killer_instagram/app_instagram/: models.py  views.py
m09_10_01/killer_instagram/killer_instagram/: asgi.py  settings.py  urls.py
m09_11_01/: db.py  main.py  models.py  pyproject.toml  schemas.py  sql_app.db
m09_12_01/: main.py  pyproject.toml
m09_12_01/documentation/: app.py  auth.py  db.py  sql_app.db
m09_12_01/refresh/: app.py  auth.py  db.py  sql_app.db
m09_12_01/simple/: app.py  auth.py  sql_app.db
m09_13_01/: docker-compose.yml  main.py  pyproject.toml
m09_13_01/postgres-data/global/: 1260  2396  2671  2672  pg_control  pg_internal.init
m09_13_01/postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
m09_13_01/postgres-data/pg_xact/: 0000
m09_13_01/src/conf/: config.ini
m09_13_01/src/repository/: users.py
m09_13_01/src/services/: auth.py  email.py
m09_14_01/rest_api_09/: .coverage  main.py  pyproject.toml  test.db
m09_14_01/rest_api_09/docs/: conf.py
m09_14_01/rest_api_09/postgres-data/: postmaster.pid
m09_14_01/rest_api_09/src/: schemas.py
m09_14_01/rest_api_09/templates/: index.html
m09_14_01/rest_api_09/tests/: conftest.py  test_main.py  test_route_auth.py  test_route_cats.py  test_unit_repository_cats.py
(+245 files in other folders)
