[tool.poetry]
name = "m05-01"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m05_01"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^16.6.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
