[tool.poetry]
name = "m05-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m05_02"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiopath = "^0.6.11"
aiofile = "^3.8.1"
aioshutil = "^1.2"
faker = "^16.7.0"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
