[tool.poetry]
name = "m06-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m06_02"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
