[tool.poetry]
name = "m09-07-01"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m09_07_01"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
aiosqlite = "^0.18.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
