[tool.poetry]
name = "m09-09-01"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m09_09_01"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
