[tool.poetry]
name = "app-poetry"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "app_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ['py310']
include = '\.py$'
string_normalization = true
quote_style = "single"
