[tool.poetry]
name = "webinar"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"
faker = "^17.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
